@@ -24,6 +24,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
+        <CommandLineParams Value="-t 3"/>
       </local>
       <environment>
         <UserOverrides Count="1">
