@@ -3,12 +3,10 @@
   <ProjectSession>
     <Version Value="10"/>
     <BuildModes Active="Default"/>
-    <Units Count="85">
+    <Units Count="86">
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="6"/>
         <TopLine Value="63"/>
         <CursorPos X="16" Y="85"/>
         <UsageCount Value="106"/>
@@ -39,19 +37,19 @@
       <Unit4>
         <Filename Value="Test3.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="62"/>
-        <CursorPos Y="62"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="78"/>
+        <CursorPos X="71" Y="109"/>
         <UsageCount Value="106"/>
+        <Loaded Value="True"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test4.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="104"/>
         <CursorPos Y="119"/>
         <UsageCount Value="106"/>
-        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test5.pas"/>
@@ -63,11 +61,10 @@
       <Unit7>
         <Filename Value="Test6.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="89"/>
         <CursorPos X="16" Y="117"/>
         <UsageCount Value="106"/>
-        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test7.pas"/>
@@ -88,11 +85,10 @@
       <Unit10>
         <Filename Value="Test9.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="41"/>
         <CursorPos X="109" Y="44"/>
         <UsageCount Value="106"/>
-        <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test10.pas"/>
@@ -106,11 +102,10 @@
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="90"/>
         <CursorPos X="8" Y="61"/>
         <UsageCount Value="106"/>
-        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
@@ -206,10 +201,12 @@
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="543"/>
-        <CursorPos X="12" Y="559"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="273"/>
+        <CursorPos X="59" Y="285"/>
         <UsageCount Value="18"/>
+        <Loaded Value="True"/>
       </Unit22>
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
@@ -227,11 +224,10 @@
       </Unit24>
       <Unit25>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="2334"/>
         <CursorPos X="26" Y="2362"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/datih.inc"/>
@@ -250,10 +246,10 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1196"/>
         <CursorPos Y="1220"/>
         <UsageCount Value="47"/>
-        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="runtest.sh"/>
@@ -286,11 +282,10 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="524"/>
         <CursorPos Y="553"/>
         <UsageCount Value="15"/>
-        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../../cvs.old.versions/ibx/runtime/IBSQL.pas"/>
@@ -307,11 +302,10 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="188"/>
         <CursorPos X="15" Y="192"/>
         <UsageCount Value="15"/>
-        <Loaded Value="True"/>
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
@@ -429,11 +423,10 @@
       </Unit52>
       <Unit53>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="45"/>
         <CursorPos X="32" Y="45"/>
         <UsageCount Value="24"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
       <Unit54>
@@ -648,134 +641,49 @@
       </Unit83>
       <Unit84>
         <Filename Value="../../../../fpcsrc/fixes_3.0/rtl/inc/generic.inc"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="809"/>
         <CursorPos Y="830"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit84>
+      <Unit85>
+        <Filename Value="/usr/share/fpcsrc/rtl/inc/ustringh.inc"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="116"/>
+        <CursorPos X="10" Y="135"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit85>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="7" HistoryIndex="6">
       <Position1>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="435" TopLine="413"/>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="559" Column="46" TopLine="543"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="792" TopLine="766"/>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="70" Column="25" TopLine="61"/>
       </Position2>
       <Position3>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1922" TopLine="1906"/>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="277" TopLine="270"/>
       </Position3>
       <Position4>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="461" Column="29" TopLine="437"/>
+        <Filename Value="Test3.pas"/>
+        <Caret Line="109" Column="12" TopLine="73"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="129" Column="16" TopLine="114"/>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="277" TopLine="270"/>
       </Position5>
       <Position6>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="282" Column="70" TopLine="255"/>
+        <Filename Value="Test3.pas"/>
+        <Caret Line="113" TopLine="81"/>
       </Position6>
       <Position7>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="328" Column="26" TopLine="301"/>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="277" TopLine="270"/>
       </Position7>
-      <Position8>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="335" Column="51" TopLine="308"/>
-      </Position8>
-      <Position9>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="389" Column="27" TopLine="362"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1314" Column="50" TopLine="1287"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1766" Column="38" TopLine="1738"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1769" Column="33" TopLine="1741"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2360" Column="33" TopLine="2332"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2362" Column="26" TopLine="2334"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="123" Column="19" TopLine="104"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="426" Column="7" TopLine="400"/>
-      </Position16>
-      <Position17>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="133" Column="15" TopLine="116"/>
-      </Position17>
-      <Position18>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="284" Column="26" TopLine="281"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="161" Column="15" TopLine="144"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="883" Column="3" TopLine="881"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="192" Column="20" TopLine="165"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="770" Column="3" TopLine="768"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../changelog"/>
-        <Caret Line="43" Column="18" TopLine="13"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="1220" TopLine="1196"/>
-      </Position24>
-      <Position25>
-        <Filename Value="Test6.pas"/>
-        <Caret Line="117" Column="29" TopLine="55"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="1220" TopLine="1196"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="349" Column="21" TopLine="333"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="147" Column="20" TopLine="131"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="509" Column="3" TopLine="507"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="145" Column="15" TopLine="118"/>
-      </Position30>
     </JumpHistory>
   </ProjectSession>
 </CONFIG>
